0.8.0 - currently working on
- [#3280] Feature: Add hooks to ::cleanUp
- [#3791] Feature: When saving an 1:n relation, delete all unconnected records
- [#3790] Feature: Add cascading deletes for 1:n IRRE relations
- [#3736] Fix: DB warnings in the EM
- [#3801] Fix: The FE user mapper must not use the user data from TSFE->fe_user->user
- [#2684] Feature: Implement saving of compositions (1:n relations)
- [#3788] Feature: Add DataMapper::findAllByRelation
- [#3782] Fix: Typo in tca.php
- [#3772] Feature: Add country to the FE user model
- [#2682] Feature: Implement dataMapper::delete
- [#3728] Change: Drop functions that have been announced to be removed in oelib 0.8.0
- [#3768] Fix: Relations to FE user groups with the UID 0 should be ignored
- [#3741] Fix: PID in page type error message displayed as "Array"
- [#3710] Change: Use self:: for static calls within the same class
- [#3734] Fix: List::getUids and ::hasUid need to react to changes
- [#3729] Change: Provide ext_autoload for our extensions

0.7.0 - released 2010-02-23
- [#3701] Feature: Add Model::markAsVisible and ::markAsHidden
- [#3679] Change: Update all PEAR and emogrifier classes to the latest versions
- [#3650] Fix: Objects overwrite/delete each other's configuration arrays
- [#3677] Fix: Return-path in e-mails has additional <> around it when forceReturnPath is used
- [#3670] Fix: PEAR classes can get included twice
- [#3673] Fix: Model::existsKey returns false for null data
- [#3556] Fix: Use PATH_tslib in require once for tslib_content
- [#3550] Fix: getUid should return an integer, not a string
- [#3659] Fix: getSubpart('foo') fails for certain characters within the subpart delimiters
- [#3372] Fix: Umlauts not encoded correctly in the e-mail headers (again)
- [#3656] Fix: Don't use TYPO3_branch or compat_version
- [#3657] Fix: ObjectFactory::make needs to pass an array to call_user_func_array
- [#3641] Change: Update all copyrights to 2010