@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-04-13 00:23
+// This file was generated on 2010-04-13 00:45
 
 $extensionPath = t3lib_extMgm::extPath('oelib');
 return array(
@@ -49,6 +49,7 @@ return array(
 	'tx_oelib_exception_emptyqueryresult' => $extensionPath . 'Exception/class.tx_oelib_Exception_EmptyQueryResult.php',
 	'tx_oelib_exception_notfound' => $extensionPath . 'Exception/class.tx_oelib_Exception_NotFound.php',
 	'tx_oelib_interface_address' => $extensionPath . 'Interface/class.tx_oelib_Interface_Address.php',
+	'tx_oelib_interface_geo' => $extensionPath . 'Interface/class.tx_oelib_Interface_Geo.php',
 	'tx_oelib_interface_loginmanager' => $extensionPath . 'Interface/class.tx_oelib_Interface_LoginManager.php',
 	'tx_oelib_interface_mailrole' => $extensionPath . 'Interface/class.tx_oelib_Interface_MailRole.php',
 	'tx_oelib_mapper_backenduser' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_BackEndUser.php',
